--- a/services/productService/package.json
+++ b/services/productService/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "deploy": "sls deploy"
   },
   "engines": {
     "node": ">=14.15.0"
