--- a/services/productService/package.json
+++ b/services/productService/package.json
@@ -21,6 +21,7 @@
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-dotenv-plugin": "^3.12.2",
     "serverless-esbuild": "^1.17.1",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
@@ -53,5 +54,10 @@
     "testEnvironment": "node"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@middy/core": "^2.5.4",
+    "@middy/http-json-body-parser": "^2.5.4",
+    "pg": "^8.7.1"
+  }
 }
