--- a/services/productService/tsconfig.json
+++ b/services/productService/tsconfig.json
@@ -11,7 +11,8 @@
     "outDir": "lib",
     "types": ["node", "jest"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
