--- a/services/productService/.env.example
+++ b/services/productService/.env.example
@@ -1,3 +1,7 @@
-BUCKET="bathroom-paper-app-files"
+PG_HOST=""
+PG_PORT=5432
+PG_DATABASE=""
+PG_USERNAME=""
+PG_PASSWORD=""
 AWS_NODEJS_CONNECTION_REUSE_ENABLED=1
 NODE_OPTIONS="--enable-source-maps --stack-trace-limit=1000"
