--- a/services/importService/package.json
+++ b/services/importService/package.json
@@ -16,7 +16,9 @@
     "@middy/http-json-body-parser": "^2.5.3",
     "aws-sdk": "^2.1058.0",
     "csv-parser": "^3.0.0",
-    "pg": "^8.7.1"
+    "jest": "^27.4.7",
+    "serverless-dotenv-plugin": "^3.12.2",
+    "ts-jest": "^27.1.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
@@ -24,12 +26,9 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^14.14.25",
     "aws-sdk-mock": "^5.5.1",
-    "jest": "^27.4.7",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
-    "serverless-dotenv-plugin": "^3.12.2",
     "serverless-esbuild": "^1.17.1",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
