add controller, service for services

--- a/services/importService/package.json
+++ b/services/importService/package.json
@@ -42,7 +42,9 @@
     ],
     "moduleNameMapper": {
       "@libs(.*)$": "<rootDir>/src/libs/$1",
-      "@utils(.*)$": "<rootDir>/src/utils/$1"
+      "@utils(.*)$": "<rootDir>/src/utils/$1",
+      "@config(.*)$": "<rootDir>/src/config/$1",
+      "@services(.*)$": "<rootDir>/src/services/$1"
     },
     "roots": [
       "<rootDir>/src/"
