--- a/services/productService/tsconfig.paths.json
+++ b/services/productService/tsconfig.paths.json
@@ -4,7 +4,10 @@
     "paths": {
       "@functions/*": ["src/functions/*"],
       "@libs/*": ["src/libs/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@services/*": ["src/services/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@config/*": ["src/config/*"]
     }
   }
 }
