--- a/services/authorizationService/tsconfig.paths.json
+++ b/services/authorizationService/tsconfig.paths.json
@@ -4,6 +4,9 @@
     "paths": {
       "@functions/*": ["src/functions/*"],
       "@libs/*": ["src/libs/*"],
+      "@services/*": ["src/services/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@config/*": ["src/config/*"]
     }
   }
 }
